2005-06-02  Francois Dumont  <dums@stlport...>

	* src/c_locale_win32/c_locale_win32.c: Add workaround for a Windows PSDK bug
	concerning currency international symbol, the seperation character is missing.
	
	* src/locale_impl.h, locale_impl.cpp: Fix implementation to make classic locale
	implementation a normal instance that is released when the counter reach 0, the
	only difference is that no delete is performed on this instance. Idem for classic
	locale implementation facets.

	* stlport/cwctype: And _GLIBCPP_USE_WCHAR_T check when using GLibC as in this
	case wide char functions are not imported in std and must be imported from the
	global namespace.

2005-06-01  Francois Dumont  <dums@stlport...>

	* src/locale_impl.h, locale_impl.cpp: Change classic locale initialization
	implementation for limited compiler like MSVC6.

2005-06-01  Petr Ovtchenkov  <ptr@island...>

	* stlport/stl/c_locale.h: check gcc on MacOS X. Patch by Zdenek Nemec

	* build/Makefiles/nmake/evc3.mak, evc4.mak, targets.mak:
	support SH3/SH4 platform. Patch by Michael Fink.

	* build/Makefiles/nmake/app/evc3.mak, evc4.mak: ditto.

	* build/Makefiles/nmake/lib/evc3.mak, evc4.mak: ditto.

	* build/lib/configure.bat, src/stlport.rc: ditto.

2005-05-30  Francois Dumont  <dums@stlport...>

	* src/locale_impl.h, locale_impl.cpp, stlport/stl/_locale.h: An other pass
	throught the classic locale initialization. Now all needed static variables
	are in _Locale_impl::make_classic_locale method. Removed useless _Stl_aligned_buffer
	union use in this locale initialization. Removed now useless _Locale_impl::free_classic_locale
	method.
	
2005-05-30  Petr Ovtchenkov  <ptr@island...>

	* stlport/stl/_windows.h: worry about Windows CE when check Interlocked
	API for MIPS. Patch by Michael Fink.

	* build/lib/configure.bat: remove the -p option by autodetecting platform.
	Patch by Michael Fink.

	* build/Makefiles/nmake/evc3.mak, evc4.mak: corrects the evc4 makefiles